[package]
name = "remotia-snippets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "1.14.0"
features = ["rt-multi-thread"]

[dependencies.remotia]
# git = "https://github.com/remotia/remotia"
# branch = "develop"
path = "../remotia"
default-features = false
features = ["profilation"]

[dependencies]
rand = "0.8.4"
